--- a/index.html
+++ b/index.html
@@ -3,113 +3,220 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ACET Department Of Ai</title>
+    <title>ACET Department Of AI</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: linear-gradient(135deg, #f6d365, #fda085);
+            margin: 0;
+            padding: 0;
+            color: #222;
+        }
+
+        h1, h2, h3, h4, h5 {
+            margin: 15px 0;
+        }
+
+        p {
+            width: 80%;
+            margin: auto;
+            line-height: 1.6;
+        }
+
+        img {
+            margin: 15px auto;
+            display: block;
+            border-radius: 10px;
+            box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
+        }
+
+        embed {
+            display: block;
+            margin: 20px auto;
+            border: 4px solid #fff;
+            border-radius: 10px;
+            height: 500px;
+            width: 70vw;
+            box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
+        }
+
+        section {
+            padding: 30px 0;
+        }
+
+        /* Section backgrounds */
+        .section1 { background: linear-gradient(to right, #a18cd1, #fbc2eb); }
+        .section2 { background: linear-gradient(to right, #f093fb, #f5576c); }
+        .section3 { background: linear-gradient(to right, #4facfe, #00f2fe); }
+        .section4 { background: linear-gradient(to right, #43e97b, #38f9d7); }
+        .section5 { background: linear-gradient(to right, #fa709a, #fee140); }
+
+        /* PDF hover effect */
+        embed:hover {
+            transform: scale(1.02);
+            transition: 0.3s ease-in-out;
+        }
+
+        /* Make PDFs interactive scroll */
+        embed {
+            overflow: auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>ACHARIYA COLLEG OF ENGINEERING TECHNOLOGY</h1>
-    <h2>DEPARTMENT OF AI&DS</h2>
-    <img width="800pixel" src="download.jpg" alt="">
-    <p>WELCOME TO OUR DEPARTMENT AI&DS</p>
-    <P> In Our Department where innovation and analytical excellence converge to drive technological advancement,solve complex problem
-    Our department is dedicated to harnessing the power of artificial intelligence and data science to unlock new possibilities and enhance decision-making across various domains.
-    Our Mission: We aim to advance the frontiers of artificial intelligence and data science through cutting-edge research, education, and collaboration.
-     Our mission is to develop intelligent systems and data-driven solutions that address real-world challenges, foster innovation, and contribute to the betterment of society.</P>
- <h2>THANKYOU MD SIR</h2> 
- <img width="600pixel" src="MD.jpg" alt="">  
- <h3>MESSAGE FROM OUR CHIEF MENTOR</h3>
- <P> As the CHIEF MENTOR, I am pleased with the positive feedback and comments from parents and students who have chosen ACHARIYA. This prospectus will provide you with information about the ACHARIYA GROUP OF SCHOOLS and its uniqueness in every way.
- I encourage parents to choose ACHARIYA to assist their children in MANIFESTING THEIR POTENTIAL and making the most of their lives. ACHARIYA's Educational Design, Methodology, Infrastructure, and Systems are entirely focused on the holistic development of the child. The highly motivated and well-trained teaching faculty, as well as the intellectual environment provided, combined with the serene beauty, will make this the ideal school for your child.
-Dear parents, choose ACHARIYA TO GIVE YOUR child a life of abundance and choice. I am happy to welcome your child to the family of ACHARIYA</P>
+
+<section class="section1">
+<h1>ACHARIYA COLLEG OF ENGINEERING TECHNOLOGY</h1>
+<h2>DEPARTMENT OF AI&DS</h2>
+<img width="800" src="download.jpg" alt="">
+<p>WELCOME TO OUR DEPARTMENT AI&DS</p>
+<P>In Our Department where innovation and analytical excellence converge to drive technological advancement, solve complex problems.
+Our department is dedicated to harnessing the power of artificial intelligence and data science to unlock new possibilities and enhance decision-making across various domains.
+Our Mission: We aim to advance the frontiers of artificial intelligence and data science through cutting-edge research, education, and collaboration.
+Our mission is to develop intelligent systems and data-driven solutions that address real-world challenges, foster innovation, and contribute to the betterment of society.</P>
+</section>
+
+<section class="section2">
+<h2>THANKYOU MD SIR</h2> 
+<img width="600" src="MD.jpg" alt="">  
+<h3>MESSAGE FROM OUR CHIEF MENTOR</h3>
+<P>As the CHIEF MENTOR, I am pleased with the positive feedback and comments from parents and students 
+    who have chosen ACHARIYA. This prospectus will provide you with information about the ACHARIYA GROUP OF
+     SCHOOLS and its uniqueness in every way. I encourage parents to choose ACHARIYA to assist their children in
+      MANIFESTING THEIR POTENTIAL and making the most of their lives. ACHARIYA's Educational Design, Methodology,
+       Infrastructure, and Systems are entirely focused on the holistic development of the child. The highly motivated
+        and well-trained teaching faculty, as well as the intellectual environment provided, combined with the serene
+         beauty, will make this the ideal school for your child. Dear parents, choose ACHARIYA TO GIVE YOUR child a life
+          of abundance and choice. I am happy to welcome your child to the family of ACHARIYA</P>
+</section>
+
+<section class="section3">
 <h3>BELOVED PRINCIPAL SIR</h3>
-<img width="400pixel" src="PRINCIPAL.jpg" alt="">
+<img width="400" src="PRINCIPAL.jpg" alt="">
 <h3>MESSAGE FROM OUR PRINCIPAL</h3>
-<P>I am delighted to welcome you to the ACET. I hope to convey the passion and enthusiasm that both staff and students bring to you and all that they do here, making ACET a wonderful place to learn. It is found that the institution has achieved so many feathers to its growth during the last 10 years. The efforts taken by the Management, Principal, Faculty, Staff, and students to reach this success are commendable The purpose of education is to teach our students to think creatively, innovatively and to develop the capacity to reason out facts and this is achieved by providing them an excellent academic environment. We endeavor to equip our students with both technical and non-technical skills, so that they may contribute to the industry as excellent professionals. Let us together tap the depth of the ocean and explore the universe through the wings of knowledge and the power of innovation and the skills of success. The Experiment will initiate an attitude akin to positive and protective thinking.</P>
+<P>I am delighted to welcome you to the ACET. 
+    I hope to convey the passion and enthusiasm that both staff and students bring to you and all that they do here,
+     making ACET a wonderful place to learn. It is found that the institution has achieved so many feathers to its 
+     growth during the last 10 years. The efforts taken by the Management, Principal, Faculty, Staff, and students to
+      reach this success are commendable The purpose of education is to teach our students to think creatively, 
+      innovatively and to develop the capacity to reason out facts and this is achieved by providing them an excellent 
+      academic environment. We endeavor to equip our students with both technical and non-technical skills, so that they 
+      may contribute to the industry as excellent professionals. Let us together tap the depth of the ocean and explore
+       the universe through the wings of knowledge and the power of innovation and the skills of success. The Experiment
+        will initiate an attitude akin to positive and protective thinking.</P>
+</section>
+
+<section class="section4">
 <h1>ABOUT OUR DEPARTMENT</h1>
-<img width="500pixel" src="ai.jpg" alt="">
-<P>The department of Artificial Intelligence and Data Science (AI&DS) was established during the academic year 2022–23 with an intake of 60. The department is approved by the AICTE, New Delhi, and is affiliated with Pondicherry University, Puducherry.</P>
-<P>Artificial Intelligence and Data Science is a new branch of study that deals with scientific methodologies, processes, and techniques drawn from different domains like statistics, cognitive science, computing, and information science to extract knowledge from structured and unstructured data. This knowledge is applied to making various intelligent decisions in business applications. AI&DS focuses on collecting, categorizing, strategizing, analyzing, and interpreting data. It is a specialized branch that deals with the development of data-driven solutions, data visualization tools, and techniques to analyze big data. It also incorporates the concepts of machine learning and deep learning model building for solving various computational and real-world problems.</P>
+<img width="500" src="ai.jpg" alt="">
+<P>The department of Artificial Intelligence and Data Science (AI&DS) 
+    was established during the academic year 2022–23 with an intake of 60. 
+    The department is approved by the AICTE, New Delhi,
+     and is affiliated with Pondicherry University, Puducherry.
+Artificial Intelligence and Data Science is a new branch of study that 
+deals with scientific methodologies, processes, and techniques drawn from different
+ domains like statistics, cognitive science, computing, and information science to extract knowledge
+  from structured and unstructured data. This knowledge is applied to making various intelligent decisions 
+  in business applications. AI&DS focuses on collecting, categorizing, strategizing, analyzing, and interpreting data.
+   It is a specialized branch that deals with the development of data-driven solutions, data visualization tools,
+    and techniques to analyze big data. It also incorporates the concepts of machine learning and deep learning model 
+    building for solving various computational and real-world problems.</P>
+</section>
+
+<section class="section5">
 <h5>ABOUT OUR HOD</h5>
-<img width="300pixel" src="hod.jpg" alt="">
-<p>Our Respected Hod MRS.S.RAJALAKSHMI B.E.,M.Tech.,(Ph.D) ,She is a distinguished leader in the field of Artificial Intelligence and Data Science. With an impressive background in both academia and industry, Mrs. Rajalakshmi has significantly advanced research and application in these domains. Her leadership is characterized by a commitment to fostering innovation, driving cutting-edge research, and developing robust educational programs that equip students with the skills needed for success in the rapidly evolving tech landscape. Under her guidance, the department has flourished, establishing itself as a hub of excellence and a beacon of knowledge in the AI and data science community. Mrs. Rajalakshmi's visionary approach and dedication continue to inspire both faculty and students, shaping the future of technology and its applications.</p>
+<img width="300" src="hod.jpg" alt="">
+<p>Our Respected Hod MRS.S.RAJALAKSHMI B.E.,M.Tech.,(Ph.D) ,
+    She is a distinguished leader in the field of Artificial Intelligence and Data Science.
+     With an impressive background in both academia and industry, Mrs. Rajalakshmi has significantly advanced
+      research and application in these domains. Her leadership is characterized by a commitment to fostering innovation,
+       driving cutting-edge research, and developing robust educational programs that equip students with the skills 
+       needed for success in the rapidly evolving tech landscape. Under her guidance, the department has flourished, 
+       establishing itself as a hub of excellence and a beacon of knowledge in the AI and data science community. Mrs. 
+       Rajalakshmi's visionary approach and dedication continue to inspire both faculty and students, shaping the future 
+       of technology and its applications.</p>
+</section>
+
 <h3>STAFFS</h3>
 <img src="staff2.jpg" alt="">
+
 <h2>STUDENT INFORMATION</h2>
 <h3>II-YEAR STUDENT INFORMATION</h3>
-<embed src="II YR.pdf" style="width:70VW ;">
-    <h3>III-YEAR STUDENT INFORMATION</h3>
-    <embed src="III YR.pdf" style="width:70vw;">
-        <h2>Pondicherry University Syllabus</h2>
-        <embed src="syllabus.pdf" style="width:70vw;">
-            <h2>SEMESTER III NOTES</h2>
-            <h3>ETC</h3>
-            <embed src="ETC.pdf" style="width:70vw;">
-                <h3>M-III</h3>
-                <embed src="m-III.pdf" style="width:70vw;">
-                    <h3>DSD</h3>
-                    <embed src="Dsd.pdf" style="width:70vw;">
-                        <h3>DSA</h3>
-                        <embed src="dsa.pdf" style="width:70vw;">
-                            <h3>DBMS</h3>
-                        <embed src="DBMS notes.pdf" style="width:70vw;">
-                            <h3>EE</h3>
-                            <embed src="ee.pdf" style="width:70vw;">
-                                <h3>TOC</h3>
-                                <embed src="toc.pdf" style="width:70vw;">
-                                    <h3>SAC</h3>
-                                    <embed src="SAC.pdf" style="width:70vw;">
-                                        <h3>IDAV</h3>
-                                        <embed src="IDAV.pdf" style="width:70vw;">
-                                            <h3>DISCRETE MATHEMATICS</h3>
-                                            <embed src="DM.pdf" style="width:70vw;">
-                                                <h3>OS</h3>
-                                                <embed src="OS.pdf" style="width:70vw;">
-                                                    <h3>COA</h3>
-                                                    <embed src="COA.pdf" style="width:70vw;">
-                                                        <h3>AI</h3>
-                                                        <embed src="COA.pdf" style="width:70vw;">
-                                                            <h3>CN</h3>
-                                                            <embed src="CN.pdf" style="width:70vw;">
-                                                                <h3>LDSM</h3>
-                                                                <embed src="ldsm.pdf" style="width:70vw;">
-                                                                    <h3>DM</h3>
-                                                                    <embed src="DM1.pdf" style="width:70vw;">
-                                                                        <h3>IDS</h3>
-                                                                        <embed src="IDS.pdf" style="width:70vw;">
-                                                                            <h3>EAS</h3>
-                                                                            <embed src="EAS.pdf" style="width:70vw;">
-                                                                                
+<embed src="II YR.pdf">
+<h3>III-YEAR STUDENT INFORMATION</h3>
+<embed src="III YR.pdf">
+
+<h2>Pondicherry University Syllabus</h2>
+<embed src="syllabus.pdf">
+
+<h2>SEMESTER III NOTES</h2>
+<h3>ETC</h3>
+<embed src="ETC.pdf">
+<h3>M-III</h3>
+<embed src="m-III.pdf">
+<h3>DSD</h3>
+<embed src="Dsd.pdf">
+<h3>DSA</h3>
+<embed src="dsa.pdf">
+<h3>DBMS</h3>
+<embed src="DBMS notes.pdf">
+<h3>EE</h3>
+<embed src="ee.pdf">
+<h3>TOC</h3>
+<embed src="toc.pdf">
+<h3>SAC</h3>
+<embed src="SAC.pdf">
+<h3>IDAV</h3>
+<embed src="IDAV.pdf">
+<h3>DISCRETE MATHEMATICS</h3>
+<embed src="DM.pdf">
+<h3>OS</h3>
+<embed src="OS.pdf">
+<h3>COA</h3>
+<embed src="COA.pdf">
+<h3>AI</h3>
+<embed src="COA.pdf">
+<h3>CN</h3>
+<embed src="CN.pdf">
+<h3>LDSM</h3>
+<embed src="ldsm.pdf">
+<h3>DM</h3>
+<embed src="DM1.pdf">
+<h3>IDS</h3>
+<embed src="IDS.pdf">
+<h3>EAS</h3>
+<embed src="EAS.pdf">
+
 <h1>EVENTS</h1>
 <h2>HANDS ON TRAINING JAVA</h2>
-<img width="300pixel" src="JV.jpg" alt="">
+<img width="300" src="JV.jpg" alt="">
 <h2>WELLNESS WORKSHOP</h2>
-<img width="300pixel" src="wn.jpg" alt="">
+<img width="300" src="wn.jpg" alt="">
 <h2>INDUSTRIAL VISIT</h2>
-<img width="300pixel" src="iv.jpg" alt="">
+<img width="300" src="iv.jpg" alt="">
 <h2>HANDS ON TRAINING WEB DEVELOPMENT</h2>
-<img width="300pixel" src="hw.jpg" alt="">
+<img width="300" src="hw.jpg" alt="">
 <h2>GUEST LECTURE</h2>
-<img width="300pixel" src="GL.jpg" alt="">
+<img width="300" src="GL.jpg" alt="">
 <h2>IOT WORKSHOP</h2>
-<img width="300pixel" src="iotws.jpg" alt="">
+<img width="300" src="iotws.jpg" alt="">
 <h2>AIETA BRAIN GAMES</h2>
-<img width="300pixel" src="BG.jpg" alt="">
+<img width="300" src="BG.jpg" alt="">
 <h2>GUEST LECTURE</h2>
-<img  width="300pixel" src="EASGL.jpg" alt="">
+<img width="300" src="EASGL.jpg" alt="">
+
 <h2>ACADAMIC CALENDER</h2>
-<embed src="achive.pdf" style="width:70vw;">
-    <h2>STUDENT ACHIVEMENTS</h2>
-    <embed src="boo.pdf" style="width:70vw;">
-        <h3> WEBSITE DEVELOPED BY:</h3>
-        <h4>K.Patchaivalliammal III-YR(AI&DS)</h4>
-        <h4>N.Anushiya III-YR(AI&DS)</h4>
-        <h4>K.M.Anushya III-YR(AI&DS)</h4>
+<embed src="achive.pdf">
+<h2>STUDENT ACHIVEMENTS</h2>
+<embed src="boo.pdf">
+
+<h3>WEBSITE DEVELOPED BY:</h3>
+<h4>K.Patchaivalliammal III-YR(AI&DS)</h4>SLKJMNHBV CX 1
 <h3>FOR CONTACT:</h3>
-      <h4>acetaids2022@gmail.com</h4>
+<h4>acetaids2022@gmail.com</h4>
 
+<h1>THANK YOU !</h1>
 
-
-         <h1>THANK YOU !</h1>
-
-                             
 </body>
 </html>
